Add note about fork

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+NOTE: This is a personal fork so I can keep it building for my family.
+You are welcome to use it, but the official upstream is https://gitlab.gnome.org/Archive/banshee
+
 Banshee is a multimedia management and playback application for GNOME, with
 support for OS X and Windows as well.
 
